fixed fouc on hero element with visibility:hidden

--- a/sass/components/_floating-icons.scss
+++ b/sass/components/_floating-icons.scss
@@ -11,6 +11,8 @@
   }
 
   &__icon {
+    visibility: hidden;
+
     &--js {
       color: var(--clr-js);
     }
