--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@ body {
 
   &__down-arrow {
     display: none !important;
+    visibility: hidden;
 
     @include respond(sm) {
       display: inline-block !important;
@@ -66,12 +67,14 @@ body {
   &__primary-heading {
     font-size: clamp(3rem, 2.5vw, 8rem);
     text-shadow: var(--shdw-text);
+    visibility: hidden;
   }
 
   &__secondary-heading {
     font-size: clamp(2rem, 2vw, 3rem);
     margin-top: 0.5rem;
     font-weight: var(--fw-normal);
+    visibility: hidden;
   }
 
   &__btn {
@@ -86,6 +89,7 @@ body {
     letter-spacing: 0.1rem;
     border-radius: 0.5rem;
     cursor: pointer;
+    visibility: hidden;
 
     &:focus {
       border: var(--clr-btn-border);
